--- a/application/rbt/view/index/record.html
+++ b/application/rbt/view/index/record.html
@@ -196,8 +196,12 @@
 			.item_detail {}
 
 			.tt1 {
-				margin-top: 5px;
-				font-size: 16px;
+				font-size: 14px;
+				margin: 5px;
+				padding: 5px 10px;
+				background-color: rgb(223,244,255);
+				border-radius: 5px;
+				line-height: 1.5;
 			}
 
 			.green {
@@ -263,7 +267,7 @@
 		</div>
 
 		<div id="way2" style="width:100%;" class="ToHide">
-			<div id="content2" style="background-color:rgb(223,244,255);color:black;font-size:16px;">
+			<div id="content2">
 
 			</div>
 		</div>
