--- a/application/admin/view/changed/config.html
+++ b/application/admin/view/changed/config.html
@@ -45,12 +45,12 @@
               <textarea name="gd" placeholder="请输入" class="layui-textarea">{$info?$info['gd']:''}</textarea>
             </div>
           </div>
-         <!-- <div class="layui-form-item layui-form-text">
+          <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">域名链接</label>
             <div class="layui-input-block">
               <textarea name="yuming" placeholder="请输入" class="layui-textarea">{$info?$info['yuming']:''}</textarea>
             </div>
-          </div>-->
+          </div>
           <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">群聊警告</label>
             <div class="layui-input-block">
