--- a/application/admin/view/public/head.html
+++ b/application/admin/view/public/head.html
@@ -180,7 +180,7 @@
                         {if $Think.session.user_uid == '1'}
                         <li id="menuli6" class="{if $Request.controller=='Uncul'}uk-active{/if}"><a id="menu6" href = "{:url('uncul/index')}">未结算</a></li>
                         <!--<li id="menuli9" class="{if $Request.controller=='Sub'&&$Request.action=='flyer'}uk-active{/if}"><a id="menu9" href = "{:url('sub/flyer')}">飞单</a></li>-->
-                        <!--<li id="menuli11" class="{if $Request.controller=='Changed'&&$Request.action=='changerecord'}uk-active{/if}"><a id="menu11" href = "{:url('changed/changeRecord')}">改单</a></li>-->
+                        <li id="menuli11" class="{if $Request.controller=='Changed'&&$Request.action=='changerecord'}uk-active{/if}"><a id="menu11" href = "{:url('changed/changeRecord')}">改单</a></li>
                         <li id="menuli12" class="{if $Request.controller=='Users'&&$Request.action=='online'}uk-active{/if}"><a id="menu12" href = "{:url('users/online')}">在线玩家</a></li>
                         <!--<li id="menuli13" class="{if $Request.controller=='Changed'&&$Request.action=='loglist'}uk-active{/if}"><a id="menu13" href = "{:url('changed/loglist')}">日志</a></li>-->
                         <li id="menuli13" class="{if $Request.controller=='Changed'&&$Request.action=='config'}uk-active{/if}"><a id="menu14" href = "{:url('changed/config')}">设置</a></li>
